[package]
name = "httpmock"
version = "0.8.2"
authors = ["Alexander Liesenfeld <alexander.liesenfeld@outlook.com>"]
edition = "2021"
description = "HTTP mocking library for Rust"
readme = "README.md"
keywords = ["http", "mock", "test"]
categories = ["development-tools::testing"]
license = "MIT"
repository = "https://github.com/httpmock/httpmock"
rust-version = "1.82.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_regex = "1"
base64 = "0.22"
regex = "1"
tracing = { version = "0.1", features = ["log"] }
url = "2"
stringmetrics = "2"
assert-json-diff = "2"
async-trait = "0.1"
async-object-pool = "0.2"
crossbeam-utils = "0.8"
futures-util = "0.3"
similar = "2"
form_urlencoded = "1"
thiserror = "2"
path-tree = ">=0.8.0, <0.8.4"
http = "1"
bytes = { version = "1", features = ["serde"] }
http-body-util = "0.1"
tabwriter = "1"
colored = { version = "3", optional = true }
clap = { version = "4", features = ["derive", "env"], optional = true }
serde_yaml = { version = "0.9", optional = true }
headers = { version = "0.4", optional = true }

### TLS / HTTPS / PROXY
rustls = { version = "0.23", default-features = false, features = ["std", "tls12"], optional = true }
rcgen = { version = "0.13", features = ["pem", "x509-parser"], optional = true }
tokio-rustls = { version = "0.26", default-features = false, features = ["logging", "tls12"], optional = true }
rustls-pemfile = { version = "2", optional = true }
tls-detect = { version = "0.1", optional = true }
if-addrs = { version = "0.10", optional = true }
hyper-rustls = { version = "0.27", default-features = false, features = ["http1", "logging", "tls12", "native-tokio"], optional = true }
futures-timer = "3"
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

[dev-dependencies]
env_logger = "0.11"
actix-rt = "2"
colored = "3"
# Disable default features to avoid pulling in OpenSSL via native-tls; use rustls instead.
reqwest = { version = "0.12", default-features = false, features = ["blocking", "cookies", "rustls-tls-native-roots"] }
syn = { version = "2", features = ["full"] }
urlencoding = "2"
smol = "2"

[features]
default = ["cookies", "server"]
standalone =  ["server", "clap", "tracing-subscriber", "record", "http2", "cookies", "remote", "remote-https"] # enables standalone mode
color = ["colored"] # enables colorful output in standalone mode
cookies = ["headers"] # enables support for matching cookies
remote = ["hyper-util/client-legacy", "hyper-util/http2"] # allows to connect to remote mock servers
remote-https = ["remote", "rustls", "rustls/ring", "hyper-rustls", "hyper-rustls/ring", "hyper-rustls/http2"] # allows to connect to remote mock servers via HTTPS
proxy = ["remote-https", "hyper-util/client-legacy", "hyper-util/http2", "hyper-rustls", "hyper-rustls/http2"] # enables proxy functionality
https = ["server", "rustls", "rcgen", "tokio-rustls", "hyper-rustls", "rustls-pemfile", "rustls/ring", "tls-detect", "if-addrs"] # enables httpmock server support for TLS/HTTPS
http2 = ["hyper/http2", "hyper-util/http2"] # enables httpmocks server support for HTTP2
record = ["proxy", "serde_yaml"]
experimental = [] # marker feature for experimental features
server = ["hyper/server", "hyper-util/server", "hyper-util/server-auto", "tokio/rt-multi-thread", "tokio/signal", "tokio/net"] # enables local HTTP server runtime

[[bin]]
name = "httpmock"
required-features = ["standalone"]

[package.metadata.docs.rs]
all-features = true

[target.'cfg(all(target_arch = "wasm32", not(target_os = "wasi")))'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json"] }
gloo-timers = { version = "0.2", features = ["futures"] }

[target.'cfg(all(target_arch = "wasm32", target_os = "wasi"))'.dependencies]
wasi-http-client = "0.2.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.43", features = ["sync", "macros"] }
hyper = { version = "1", features = ["http1", "client"] }
hyper-util = { version = "0.1", features = ["tokio", "http1"] }
