[package]
name = "httpmock"
version = "0.8.3"
authors = ["Alexander Liesenfeld <alexander.liesenfeld@outlook.com>"]
edition = "2021"
description = "HTTP mocking library for Rust"
readme = "README.md"
keywords = ["http", "mock", "test"]
categories = ["development-tools::testing"]
license = "MIT"
repository = "https://github.com/httpmock/httpmock"
rust-version = "1.88.0"

[lints.rust]
# Gate the `warnings` group at error level so new rustc warnings fail CI. The
# allowed lints are a temporary allow list that should be removed over time.
warnings = { level = "deny", priority = -1 }
# Allowed so lint names below that only exist on newer toolchains (e.g.
# mismatched_lifetime_syntaxes) don't fail the MSRV build.
unknown_lints = "allow"
dead_code = "allow"
mismatched_lifetime_syntaxes = "allow"
private_bounds = "allow"
unused_imports = "allow"
unused_mut = "allow"
unused_parens = "allow"
unused_variables = "allow"

[lints.clippy]
# Gate all clippy lints. The allowed lints are a temporary allow list that should be removed
# over time.
all = { level = "deny", priority = -1 }
uninlined_format_args = "allow"
enum_variant_names = "allow"
useless_borrows_in_formatting = "allow"
doc_overindented_list_items = "allow"
type_complexity = "allow"
redundant_closure = "allow"
needless_return = "allow"
expect_fun_call = "allow"
new_without_default = "allow"
to_string_in_format_args = "allow"
extra_unused_lifetimes = "allow"
single_match = "allow"
needless_borrow = "allow"
empty_line_after_doc_comments = "allow"
needless_borrows_for_generic_args = "allow"
unnecessary_lazy_evaluations = "allow"
new_ret_no_self = "allow"
needless_question_mark = "allow"
map_clone = "allow"
manual_abs_diff = "allow"
module_inception = "allow"
unnecessary_to_owned = "allow"
manual_async_fn = "allow"
ptr_arg = "allow"
useless_format = "allow"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_regex = "1"
base64 = "0.22"
regex = "1"
tracing = { version = "0.1", features = ["log"] }
url = "2"
stringmetrics = "2"
assert-json-diff = "2"
async-trait = "0.1"
async-object-pool = "0.2"
crossbeam-utils = "0.8"
futures-util = "0.3"
similar = "3"
form_urlencoded = "1"
thiserror = "2"
path-tree = ">=0.8.0, <0.8.4"
http = "1"
bytes = { version = "1", features = ["serde"] }
hyper = { version = "1", features = ["server", "http1", "client"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "http1", "server-auto"] }
http-body-util = "0.1"
tokio = { version = "1.52", features = ["sync", "macros", "rt-multi-thread", "signal", "net"] }
tabwriter = "1"
colored = { version = "3", optional = true }
clap = { version = "4", features = ["derive", "env"], optional = true }
serde_yaml = { version = "0.9", optional = true }
headers = { version = "0.4", optional = true }

### TLS / HTTPS / PROXY
rustls = { version = "0.23", default-features = false, features = ["std", "tls12"], optional = true }
rcgen = { version = "0.14", features = ["pem", "x509-parser"], optional = true }
tokio-rustls = { version = "0.26", default-features = false, features = ["logging", "tls12"], optional = true }
rustls-pki-types = { version = "1", optional = true }
tls-detect = { version = "0.1", optional = true }
if-addrs = { version = "0.15", optional = true }
hyper-rustls = { version = "0.27", default-features = false, features = ["http1", "logging", "tls12", "native-tokio"], optional = true }
futures-timer = "3"
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

[dev-dependencies]
actix-rt = "2"
reqwest = { version = "0.13", features = ["blocking", "cookies", "query"] }
urlencoding = "2"
smol = "2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
syn = "2"

[features]
default = ["cookies"]
standalone =  ["clap", "tracing-subscriber", "record", "http2", "cookies", "remote", "remote-https"] # enables standalone mode
color = ["colored"] # enables colorful output in standalone mode
cookies = ["headers"] # enables support for matching cookies
remote = ["hyper-util/client-legacy", "hyper-util/http2"] # allows to connect to remote mock servers
remote-https = ["remote", "rustls", "rustls/ring", "hyper-rustls", "hyper-rustls/ring", "hyper-rustls/http2"] # allows to connect to remote mock servers via HTTPS
proxy = ["remote-https", "hyper-util/client-legacy", "hyper-util/http2", "hyper-rustls", "hyper-rustls/http2"] # enables proxy functionality
https = ["rustls", "rcgen", "tokio-rustls", "hyper-rustls", "rustls-pki-types", "rustls/ring", "hyper-rustls/ring", "tls-detect", "if-addrs"] # enables httpmock server support for TLS/HTTPS
http2 = ["hyper/http2", "hyper-util/http2"] # enables httpmocks server support for HTTP2
record = ["proxy", "serde_yaml"]
experimental = [] # marker feature for experimental features

[[bin]]
name = "httpmock"
required-features = ["standalone"]

[package.metadata.docs.rs]
all-features = true
