[package]
name = "wasm-httpmock-wasmtest"
version = "0.1.0"
edition = "2021"

[lib]
# only to make wasm-pack test happy; the tests are what we run
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3"
# Browser fetch HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
httpmock = { path = "..", default-features = false, features = ["wasm"] }