[package]
name = "httpmock-wasm-test"
version = "0.1.0"
edition = "2021"

[lib]
# only to make wasm-pack test happy; the tests are what we run
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
httpmock = { path = "..", default-features = false, features = ["wasm"] }
tokio = "1.47.1"